--- a/css/styles.css
+++ b/css/styles.css
@@ -161,18 +161,53 @@ main{
     color: hsl(333, 80%, 67%);
 }
 
-@media screen and (max-width: 440px){
+.footer{
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+}
+
+.footer-links{
+    margin: 0 0 10px 0;
+    font-size: 14px;
+    color: hsl(220, 4%, 47%);
+}
+
+.link{
+    margin-left: 5px;
+    text-decoration: none;
+    color: hsl(300, 43%, 22%);
+    transition: all 0.5s;
+    font-size: 14px;
+    cursor: pointer;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+
+.link:hover{
+    color: hsl(220, 4%, 47%);
+}
+
+@media screen and (max-width: 1024px){
     
     body{
         height: 100%;
-        width: 100%;
+        position: relative;
         background-image: url("/assets/background-images/bg-pattern-top-mobile.svg");
     }
 
     .img-background{
-        background-image: url("/assets/background-images/bg-pattern-bottom-mobile.svg");
+        background-image: none;
+        /* background-image: url("/assets/background-images/bg-pattern-bottom-mobile.svg");
         width: 100%;
-        height: 400px;
+        height: 503px;
+        background-position: right;
+        background-position: 100px;
+        position: absolute;
+        top: 999px;
+        right: 0; */
     }
 
     main{
@@ -245,5 +280,17 @@ main{
 
     .user-container{
         margin: 0px 0px 20px 0px;
+    }
+
+    .footer{
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    .footer-links, .link{
+        font-size: 15px;
     }
 }
